Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,15 +32,7 @@
       <section>
         <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> contains curated decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
 
-<h3>
-<a name="mirrors" class="anchor" href="#mirrors"><span class="octicon octicon-link"></span></a>Mirrors</h3>
-
-<ul>
-<li>
-<a href="https://gitlab.com/svaksha/Julia.jl">GitLab</a> :: git clone <a href="mailto:git@gitlab.com">git@gitlab.com</a>:svaksha/Julia.jl.git </li>
-<li>
-<a href="https://git.cloudhost.io/svaksha/Julia.jl">Cloudhost</a> :: git clone <a href="mailto:git@git.cloudhost.io">git@git.cloudhost.io</a>:svaksha/Julia.jl.git</li>
-</ul><h1>
+<h1>
 <a name="pages" class="anchor" href="#pages"><span class="octicon octicon-link"></span></a>PAGES</h1>
 
 <ul>
@@ -91,20 +83,31 @@
 
 <p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the <a href="http://docs.julialang.org/en/latest/packages/packagelist/">metadata for registered Julia packages</a></p>
 
-<h3>
-<a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h3>
-
-<p>Some tips for submitting a <a href="https://github.com/svaksha/Julia.jl/pulls">pull request (PR)</a>:</p>
-
-<ul>
-<li>Add your link as per the topic, with notes (if any) to the respective MarkDown (.md) pages in the repo.</li>
-<li>For broken links submit a bug report, or replace the broken URI, then submit a PR.</li>
-<li>For Documentation and cookbooks, check if it matches the categories listed, if yes, then list it against <em>Resources / DOC</em>, else use the <a href="https://github.com/svaksha/Julia.jl/blob/master/Cookbook.md">Cookbook.md</a> page.</li>
-</ul><h1>
+<h1>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>LICENSE</h1>
 
 <ul>
 <li>This work is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License - (CC-BY-SA-3.0). Read the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file for full details.</li>
+</ul><h2>
+<a name="mirrors" class="anchor" href="#mirrors"><span class="octicon octicon-link"></span></a>Mirrors</h2>
+
+<ul>
+<li>
+<a href="https://gitlab.com/svaksha/Julia.jl">GitLab</a> :: git clone <a href="mailto:git@gitlab.com">git@gitlab.com</a>:svaksha/Julia.jl.git </li>
+<li>
+<a href="https://gitlab.devlabs.linuxassist.net/svaksha/Julia.jl">Devlabs</a> :: ssh://git@gitlab.devlabs.linuxassist.net:608/svaksha/Julia.jl.git</li>
+</ul><h2>
+<a name="contributing-guidelines" class="anchor" href="#contributing-guidelines"><span class="octicon octicon-link"></span></a>Contributing Guidelines</h2>
+
+<h5>
+<a name="to-submit-a-pr" class="anchor" href="#to-submit-a-pr"><span class="octicon octicon-link"></span></a>To submit a <a href="https://github.com/svaksha/Julia.jl/pulls">PR</a>
+</h5>
+
+<ul>
+<li>Add your link as per the topic, in <em>alphabetical order</em>, with notes (if any) to the respective section in the markdown files.</li>
+<li>For broken links or outdated information, submit a bug report, or make the necessary changes and submit a PR.</li>
+<li>For Documentation and cookbooks, check if it matches the categories listed, else, list it on the <a href="https://github.com/svaksha/Julia.jl/blob/master/Resources.md">Resources.md</a> page.</li>
+<li>For those unable to use git, create a github account, fork the 'Julia.jl' repo and edit the page by <a href="https://help.github.com/articles/editing-files-in-your-repository">clicking on the "pencil" icon on the markdown page</a>, then click on save and submit a PR. Github does this <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository">automatically in 8 steps</a>.</li>
 </ul>
       </section>
       <footer>
