Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <li>
 <a href="https://gitlab.com/svaksha/Julia.jl">GitLab</a> :: git clone <a href="mailto:git@gitlab.com">git@gitlab.com</a>:svaksha/Julia.jl.git </li>
 <li>
-<a href="https://gitlab.devlabs.linuxassist.net/svaksha/Julia.jl">Devlabs</a> :: ssh://git@gitlab.devlabs.linuxassist.net:608/svaksha/Julia.jl.git</li>
+<a href="https://gitlab.devlabs.linuxassist.net/svaksha/Julia.jl">Devlabs</a> :: git clone ssh://git@gitlab.devlabs.linuxassist.net:608/svaksha/Julia.jl.git</li>
 </ul><h2>
 <a name="contributing-guidelines" class="anchor" href="#contributing-guidelines"><span class="octicon octicon-link"></span></a>Contributing Guidelines</h2>
 
