--- a/index.html
+++ b/index.html
@@ -32,8 +32,20 @@
       <section>
         <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> contains curated decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
 
-<h1>
+<ul>
+<li><a href="#pages">PAGES</a></li>
+<li>
+<a href="#license">LICENSE</a>
+
+<ul>
+<li><a href="#mirrors">Mirrors</a></li>
+<li><a href="#contributing-guidelines">Contributing Guidelines</a></li>
+</ul>
+</li>
+</ul><h1>
 <a name="pages" class="anchor" href="#pages"><span class="octicon octicon-link"></span></a>PAGES</h1>
+
+<p><strong>NB:</strong> As a new language in the scientific computing scene, new libraries are constantly being added resulting in frequent changes and page reordering. The <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, not to be considered an endorsment of the software quality/ features, etc.. For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the <a href="http://docs.julialang.org/en/latest/packages/packagelist/">metadata for registered Julia packages</a>, else use the built-in package manager to install it after checking the requirements for versions.</p>
 
 <ul>
 <li>
@@ -79,11 +91,7 @@
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud  WWW, HTTP, Networking, Servers, etc... </li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/X-Platform-SW.md">X-Platform-SW.md</a> :: Cross-Platform Software and API for Hardware arch. (ARM, MIPS, GPU, CUDA), language API, HPC, and other libraries.</li>
-</ul><p><strong>NB:</strong> As a new language in the scientific computing scene, new libraries are constantly being added, so there will be frequent changes and page reordering. The <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, not an endorsment of the software quality/ features, etc.. </p>
-
-<p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the <a href="http://docs.julialang.org/en/latest/packages/packagelist/">metadata for registered Julia packages</a></p>
-
-<h1>
+</ul><h1>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>LICENSE</h1>
 
 <ul>
