--- a/index.html
+++ b/index.html
@@ -4,40 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Julia.jl by svaksha</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/svaksha/Julia.jl">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/svaksha/Julia.jl/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/svaksha/Julia.jl/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
+      <header>
+        <h1 class="header">Julia.jl</h1>
+        <p class="header">Curated decibans of Julia language.</p>
 
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/svaksha/Julia.jl/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/svaksha/Julia.jl/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/svaksha/Julia.jl">View On GitHub</a></li>
+        </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/svaksha">svaksha</a></p>
+
+
+      </header>
       <section>
-        <div id="title">
-          <h1>Julia.jl</h1>
-          <p>Curated decibans of Julia language.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/svaksha">svaksha</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
         <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> contains curated decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
 
 <ul>
@@ -126,9 +118,11 @@
 <li>For those unable to use git, create a github account, fork the 'Julia.jl' repo and edit the page by <a href="https://help.github.com/articles/editing-files-in-your-repository">clicking on the "pencil" icon on the markdown page</a>, then click on save and submit a PR. Github does this <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository">automatically in 8 steps</a>.</li>
 </ul>
       </section>
-
+      <footer>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+		
   </body>
 </html>
