--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 <li><a href="#contributing-guidelines">Contributing Guidelines</a></li>
 </ul>
 </li>
-</ul><h1>
+</ul><hr><h1>
 <a name="index" class="anchor" href="#index"><span class="octicon octicon-link"></span></a>INDEX</h1>
 
-<p><strong>NB:</strong> As a new language in the scientific computing scene, new libraries are constantly being added resulting in frequent changes and page reordering. The <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, not to be considered an endorsment of the software quality/ features, etc.. For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the <a href="http://docs.julialang.org/en/latest/packages/packagelist/">metadata for registered Julia packages</a>, else use the built-in package manager to install it after checking the requirements for versions.</p>
+<p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the <a href="http://docs.julialang.org/en/latest/packages/packagelist/">metadata for registered Julia packages</a>, else use the built-in package manager to install it after checking the requirements for versions.</p>
 
 <ul>
 <li>
@@ -91,7 +91,9 @@
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud  WWW, HTTP, Networking, Servers, etc... </li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/X-Platform-SW.md">X-Platform-SW.md</a> :: Cross-Platform Software and API for Hardware arch. (ARM, MIPS, GPU, CUDA), language API, HPC, and other libraries.</li>
-</ul><h1>
+</ul><p><strong>NB:</strong> As a new language in the scientific computing scene, new libraries are constantly being added resulting in frequent changes and page reordering. The <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, not to be considered an endorsment of the software quality/ features, etc.. </p>
+
+<hr><h1>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>LICENSE</h1>
 
 <ul>
@@ -100,6 +102,8 @@
 <a name="mirrors" class="anchor" href="#mirrors"><span class="octicon octicon-link"></span></a>Mirrors</h2>
 
 <ul>
+<li>
+<a href="https://bitbucket.org/svaksha/Julia.jl">Bitbucket</a> :: git clone <a href="mailto:git@bitbucket.org">git@bitbucket.org</a>:svaksha/Julia.jl.git</li>
 <li>
 <a href="https://gitlab.com/svaksha/Julia.jl">GitLab</a> :: git clone <a href="mailto:git@gitlab.com">git@gitlab.com</a>:svaksha/Julia.jl.git </li>
 <li>
