Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 <li><a href="#contributing-guidelines">Contributing Guidelines</a></li>
 </ul>
 </li>
-</ul><hr><h1>
+</ul>
+
+<hr>
+
+<h1>
 <a name="index" class="anchor" href="#index"><span class="octicon octicon-link"></span></a>INDEX</h1>
 
 <p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the <a href="http://docs.julialang.org/en/latest/packages/packagelist/">metadata for registered Julia packages</a>, else use the built-in package manager to install it after checking the requirements for versions.</p>
@@ -91,14 +95,20 @@
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud  WWW, HTTP, Networking, Servers, etc... </li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/X-Platform-SW.md">X-Platform-SW.md</a> :: Cross-Platform Software and API for Hardware arch. (ARM, MIPS, GPU, CUDA), language API, HPC, and other libraries.</li>
-</ul><p><strong>NB:</strong> As a new language in the scientific computing scene, new libraries are constantly being added resulting in frequent changes and page reordering. The <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, not to be considered an endorsment of the software quality/ features, etc.. </p>
+</ul>
 
-<hr><h1>
+<p><strong>NB:</strong> As a new language in the scientific computing scene, new libraries are constantly being added resulting in frequent changes and page reordering. The <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, not to be considered an endorsment of the software quality/ features, etc.. </p>
+
+<hr>
+
+<h1>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>LICENSE</h1>
 
 <ul>
 <li>This work is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License - (CC-BY-SA-3.0). Read the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file for full details.</li>
-</ul><h2>
+</ul>
+
+<h2>
 <a name="mirrors" class="anchor" href="#mirrors"><span class="octicon octicon-link"></span></a>Mirrors</h2>
 
 <ul>
@@ -108,7 +118,9 @@
 <a href="https://gitlab.com/svaksha/Julia.jl">GitLab</a> :: git clone <a href="mailto:git@gitlab.com">git@gitlab.com</a>:svaksha/Julia.jl.git </li>
 <li>
 <a href="https://gitlab.devlabs.linuxassist.net/svaksha/Julia.jl">Devlabs</a> :: git clone ssh://git@gitlab.devlabs.linuxassist.net:608/svaksha/Julia.jl.git</li>
-</ul><h2>
+</ul>
+
+<h2>
 <a name="contributing-guidelines" class="anchor" href="#contributing-guidelines"><span class="octicon octicon-link"></span></a>Contributing Guidelines</h2>
 
 <h5>
