--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <hr>
 
 <h1>
-<a name="index" class="anchor" href="#index"><span class="octicon octicon-link"></span></a>INDEX</h1>
+<a id="index" class="anchor" href="#index" aria-hidden="true"><span class="octicon octicon-link"></span></a>INDEX</h1>
 
-<p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the <a href="http://docs.julialang.org/en/latest/packages/packagelist/">metadata for registered Julia packages</a>, else use the built-in package manager to install it after checking the requirements for versions.</p>
+<p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, and use the built-in package manager to install it after checking the requirements for versions. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>.</p>
 
 <ul>
 <li>
@@ -66,6 +66,8 @@
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Computer-Graphics.md">Computer-Graphics.md</a> :: Plotting, Graphics and other Visualization tools.</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Database.md">Database.md</a> :: NoSQL, RDBMS and Middleware API's.</li>
+<li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/data-sets.md">data-sets.md</a> :: Data Sets.</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Earth-Science.md">Earth-Science.md</a> :: software related to the subcategories of cartography, climatology, geobiology, geochemistry, geography, geoinformatics, geology‎, geophysics‎, geoscience/GIS, geomathematics, meteorology, oceanography, etc...</li>
 <li>
@@ -92,24 +94,24 @@
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Utilities.md">Utilities.md</a> :: Handy toolkits and other general utilities for your Desktop.</li>
 <li>
-<a href="https://github.com/svaksha/Julia.jl/blob/master/Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud  WWW, HTTP, Networking, Servers, etc... </li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud WWW, HTTP, Networking, Servers, etc... </li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/X-Platform-SW.md">X-Platform-SW.md</a> :: Cross-Platform Software and API for Hardware arch. (ARM, MIPS, GPU, CUDA), language API, HPC, and other libraries.</li>
 </ul>
 
-<p><strong>NB:</strong> As a new language in the scientific computing scene, new libraries are constantly being added resulting in frequent changes and page reordering. The <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, not to be considered an endorsment of the software quality/ features, etc.. </p>
+<p><strong>DISCLAIMER :</strong> As a new language in the scientific computing scene, new libraries are constantly being added resulting in frequent changes and page reordering. Since the <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, it should not be considered an endorsment of the software quality, technical features, coding style/organization, etc.. of any single package. </p>
 
 <hr>
 
 <h1>
-<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>LICENSE</h1>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>LICENSE</h1>
 
 <ul>
-<li>This work is licensed under a Creative Commons Attribution-ShareAlike 3.0 Unported License - (CC-BY-SA-3.0). Read the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file for full details.</li>
+<li>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License - (CC BY-NC-SA 4.0) as detailed in the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file.</li>
 </ul>
 
 <h2>
-<a name="mirrors" class="anchor" href="#mirrors"><span class="octicon octicon-link"></span></a>Mirrors</h2>
+<a id="mirrors" class="anchor" href="#mirrors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mirrors</h2>
 
 <ul>
 <li>
@@ -121,15 +123,15 @@
 </ul>
 
 <h2>
-<a name="contributing-guidelines" class="anchor" href="#contributing-guidelines"><span class="octicon octicon-link"></span></a>Contributing Guidelines</h2>
+<a id="contributing-guidelines" class="anchor" href="#contributing-guidelines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing Guidelines</h2>
 
 <h5>
-<a name="to-submit-a-pr" class="anchor" href="#to-submit-a-pr"><span class="octicon octicon-link"></span></a>To submit a <a href="https://github.com/svaksha/Julia.jl/pulls">PR</a>
+<a id="to-submit-a-pr" class="anchor" href="#to-submit-a-pr" aria-hidden="true"><span class="octicon octicon-link"></span></a>To submit a <a href="https://github.com/svaksha/Julia.jl/pulls">PR</a>
 </h5>
 
 <ul>
 <li>Add your link as per the topic, in <em>alphabetical order</em>, with notes (if any) to the respective section in the markdown files.</li>
-<li>For broken links or outdated information, submit a bug report, or make the necessary changes and submit a PR.</li>
+<li>For broken links or outdated information, submit a bug report, or make the necessary changes and submit a PR. Please submit separate PR's for each link or change added.</li>
 <li>For Documentation and cookbooks, check if it matches the categories listed, else, list it on the <a href="https://github.com/svaksha/Julia.jl/blob/master/Resources.md">Resources.md</a> page.</li>
 <li>For those unable to use git, create a github account, fork the 'Julia.jl' repo and edit the page by <a href="https://help.github.com/articles/editing-files-in-your-repository">clicking on the "pencil" icon on the markdown page</a>, then click on save and submit a PR. Github does this <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository">automatically in 8 steps</a>.</li>
 </ul>
