Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       </header>
       <section>
-        <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> contains curated decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
+        <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> aggregates and curates decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
 
 <ul>
 <li><a href="#index">INDEX</a></li>
@@ -49,7 +49,7 @@
 <h1>
 <a id="index" class="anchor" href="#index" aria-hidden="true"><span class="octicon octicon-link"></span></a>INDEX</h1>
 
-<p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check the METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, and use the built-in package manager to install it after checking the requirements for versions. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>.</p>
+<p>For Base packages, check if the package you seek is listed in their <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, then use the built-in package manager to install it after checking the requirements for respective versions. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>.</p>
 
 <ul>
 <li>
