--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
 
 <ul>
 <li><a href="#mirrors">Mirrors</a></li>
-<li><a href="#contributing-guidelines">Contributing Guidelines</a></li>
+</ul>
+</li>
+<li>
+<a href="#contribute">CONTRIBUTE</a>
+
+<ul>
+<li><a href="#guidelines">Guidelines</a></li>
 </ul>
 </li>
 </ul>
@@ -55,7 +61,9 @@
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/AI.md">AI.md</a> :: Algorithms, DataMining, Data Structures, ML, NLP, ...</li>
 <li>
-<a href="https://github.com/svaksha/Julia.jl/blob/master/API.md">API.md</a> :: API's for C++, Fortran, Go, Java, JavaScript, MATLAB, Perl, Python, R, ...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Astronomy.md">Astronomy.md</a> :: Astronomy and Imaging packages.</li>
+<li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/API.md">API.md</a> :: Language API's - C++, Fortran, Go, Java, JavaScript, MATLAB, Perl, Python, R, ...</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Biology.md">Biology.md</a> :: Bioinformatics, genomics, agriculture, food science, medicine, genetic engineering, Neuroscience, et. al...</li>
 <li>
@@ -63,18 +71,19 @@
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Chemistry.md">Chemistry.md</a> :: Analytical chemistry, cheminformatics, crystallography, nanochemistry, nuclear chemistry ...</li>
 <li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Community.md">Community.md</a> :: List of community and development links, including events, (un)conferences, forums/ meetup groups, NEWS, etc..</li>
+<li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Computer-Graphics.md">Computer-Graphics.md</a> :: Plotting, Graphics and other Visualization tools.</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Database.md">Database.md</a> :: NoSQL, RDBMS and Middleware API's.</li>
 <li>
-<a href="https://github.com/svaksha/Julia.jl/blob/master/data-sets.md">data-sets.md</a> :: Data Sets.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/DataSets.md">DataSets.md</a> :: Data Sets.</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Earth-Science.md">Earth-Science.md</a> :: software related to the subcategories of cartography, climatology, geobiology, geochemistry, geography, geoinformatics, geology‎, geophysics‎, geoscience/GIS, geomathematics, meteorology, oceanography, etc...</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/i18n-L10n.md">i18n-L10n.md</a> :: Transliteration, Internationalisation (i18n) and Localisation (L10n)</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Mathematics.md">Mathematics.md</a>:: Algebra, Geometry,... anything Math related.</li>
-<li><a href="https://github.com/svaksha/Julia.jl/blob/master/NEWS.md">NEWS.md</a></li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Parallel-Computing.md">Parallel-Computing.md</a> :: HPC, Distributed Computing, Cloud computing, Cluster computing, Grid computing, ...</li>
 <li>
@@ -97,9 +106,11 @@
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud WWW, HTTP, Networking, Servers, etc... </li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/X-Platform-SW.md">X-Platform-SW.md</a> :: Cross-Platform Software and API for Hardware arch. (ARM, MIPS, GPU, CUDA), language API, HPC, and other libraries.</li>
+<li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/anonymous.md">anonymous.md</a> :: Repos that lack package clarity about the category or their classification is difficult despite skimming through the codebase will be listed here.</li>
 </ul>
 
-<p><strong>DISCLAIMER :</strong> As a new language in the scientific computing scene, new libraries are constantly being added resulting in frequent changes and page reordering. Since the <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, it should not be considered an endorsment of the software quality, technical features, coding style/organization, etc.. of any single package. </p>
+<p><strong>DISCLAIMER :</strong> As a new language in the scientific computing scene it is frequently in a state of flux due to the addition of new libraries, resulting in frequent changes and page reordering. Since the <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, it should not be considered an endorsment of any particular package for software quality, technical features, coding style/organization, etc... </p>
 
 <hr>
 
@@ -107,6 +118,7 @@
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>LICENSE</h1>
 
 <ul>
+<li>COPYRIGHT © 2012-Now <a href="http://svaksha.com/pages/Bio">SVAKSHA</a>, All Rights Reserved. </li>
 <li>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License - (CC BY-NC-SA 4.0) as detailed in the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file.</li>
 </ul>
 
@@ -122,19 +134,31 @@
 <a href="https://gitlab.devlabs.linuxassist.net/svaksha/Julia.jl">Devlabs</a> :: git clone ssh://git@gitlab.devlabs.linuxassist.net:608/svaksha/Julia.jl.git</li>
 </ul>
 
-<h2>
-<a id="contributing-guidelines" class="anchor" href="#contributing-guidelines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing Guidelines</h2>
+<h1>
+<a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>CONTRIBUTE</h1>
 
-<h5>
-<a id="to-submit-a-pr" class="anchor" href="#to-submit-a-pr" aria-hidden="true"><span class="octicon octicon-link"></span></a>To submit a <a href="https://github.com/svaksha/Julia.jl/pulls">PR</a>
-</h5>
+<h2>
+<a id="guidelines" class="anchor" href="#guidelines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Guidelines</h2>
+
+<p>The Julia community has <a href="http://julialang.org/community/standards/">ethical guidelines</a> aimed at respecting Copyright, Licenses and attribution standards which you are requested to follow while submitting materials to be listed. Additionally, if you find any material (or code repos) that violates these ethical standards, please file a bug report for their removal from <code>Julia.jl</code>.</p>
+
+<p>References :</p>
 
 <ul>
-<li>Add your link as per the topic, in <em>alphabetical order</em>, with notes (if any) to the respective section in the markdown files.</li>
+<li><a href="https://github.com/JuliaLang/julialang.github.com/issues/200">https://github.com/JuliaLang/julialang.github.com/issues/200</a></li>
+<li><a href="https://github.com/JuliaLang/julialang.github.com/issues/194">https://github.com/JuliaLang/julialang.github.com/issues/194</a></li>
+</ul>
+
+<h4>
+<a id="to-submit-a-pr" class="anchor" href="#to-submit-a-pr" aria-hidden="true"><span class="octicon octicon-link"></span></a>To submit a <a href="https://github.com/svaksha/Julia.jl/pulls">PR</a>
+</h4>
+
+<ol>
+<li>Add your link as per the top-level Category page within the topic sub-section(s), in <em>alphabetical order</em>, with notes (if any) in the markdown files.</li>
 <li>For broken links or outdated information, submit a bug report, or make the necessary changes and submit a PR. Please submit separate PR's for each link or change added.</li>
 <li>For Documentation and cookbooks, check if it matches the categories listed, else, list it on the <a href="https://github.com/svaksha/Julia.jl/blob/master/Resources.md">Resources.md</a> page.</li>
-<li>For those unable to use git, create a github account, fork the 'Julia.jl' repo and edit the page by <a href="https://help.github.com/articles/editing-files-in-your-repository">clicking on the "pencil" icon on the markdown page</a>, then click on save and submit a PR. Github does this <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository">automatically in 8 steps</a>.</li>
-</ul>
+<li>For those unable to use git, create a github account, fork the <code>Julia.jl</code> repo and edit the page by <a href="https://help.github.com/articles/editing-files-in-your-repository">clicking on the "pencil" icon on the markdown page</a>, then click on save and submit a PR. Github does this <a href="https://help.github.com/articles/editing-files-in-another-user-s-repository">automatically in 8 steps</a>.</li>
+</ol>
       </section>
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
