Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,17 +16,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Julia.jl</h1>
-        <p>Curated decibans of Julia language.</p>
-
-        <p class="view"><a href="https://github.com/svaksha/Julia.jl">View the Project on GitHub <small>svaksha/Julia.jl</small></a></p>
-
+        <h1 class="header">Julia.jl</h1>
+        <p class="header">Curated decibans of Julia language.</p>
 
         <ul>
-          <li><a href="https://github.com/svaksha/Julia.jl/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/svaksha/Julia.jl/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/svaksha/Julia.jl">View On <strong>GitHub</strong></a></li>
+          <li class="download"><a class="buttons" href="https://github.com/svaksha/Julia.jl/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/svaksha/Julia.jl/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/svaksha/Julia.jl">View On GitHub</a></li>
         </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/svaksha">svaksha</a></p>
+
+
       </header>
       <section>
         <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> aggregates and curates decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
@@ -164,11 +166,10 @@
 </ol>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/svaksha">svaksha</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
