Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <h1>
 <a id="index" class="anchor" href="#index" aria-hidden="true"><span class="octicon octicon-link"></span></a>INDEX</h1>
 
-<p>For Base packages, check if the package you seek is listed in the <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, then use the built-in package manager to install it after checking the requirements for respective versions. For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl">sample Julia package</a> model. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>.</p>
+<p>For Base packages, check if the package you seek is listed in the <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, then use the built-in package manager to install it after checking the requirements for respective versions and dont forget the Easter eggs! 
+For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl">sample Julia package</a> model. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>.</p>
 
 <ul>
 <li>
@@ -78,7 +79,7 @@
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Database.md">Database.md</a> :: NoSQL, RDBMS and Middleware API's.</li>
 <li>
-<a href="https://github.com/svaksha/Julia.jl/blob/master/DataSets.md">DataSets.md</a> :: Data Sets.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/data-sets.md">data-sets.md</a> :: Data Sets.</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Earth-Science.md">Earth-Science.md</a> :: software related to the subcategories of cartography, climatology, geobiology, geochemistry, geography, geoinformatics, geology‎, geophysics‎, geoscience/GIS, geomathematics, meteorology, oceanography, etc...</li>
 <li>
@@ -101,8 +102,6 @@
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Resources.md">Resources.md</a> :: blogs, cookbooks, cheatsheets, IJulia NoteBooks, and other non-standard resources.</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Statistics.md">Statistics.md</a> :: Actuarial Science, Finance, economics, stochastic, insurance Statistics, Operations research and Benchmarks and Optimization toolkits....</li>
-<li>
-<a href="https://github.com/svaksha/Julia.jl/blob/master/UI-UX.md">UI-UX.md</a> :: User Interface software in Julia.</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Utilities.md">Utilities.md</a> :: Handy toolkits and other general utilities for your Desktop.</li>
 <li>
