Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl
 
 <ul>
 <li>COPYRIGHT © 2012-Now <a href="http://svaksha.com/pages/Bio">SVAKSHA</a>, All Rights Reserved. </li>
-<li>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License - (CC BY-NC-SA 4.0) as detailed in the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file and ALL copies and forks of this work must retain the Copyright, Licence (LICENSE.md file) and this permission notice.</li>
+<li>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License - (CC BY-NC-SA 4.0) as detailed in the <a href="https://github.com/svaksha/Julia.jl/blob/master/LICENSE.md">LICENSE.md</a> file and ALL references, citations, copies and forks of this work must retain the Copyright, Licence (LICENSE.md file), this permission notice and must <a href="https://en.wikipedia.org/wiki/Creative_Commons_license#Attribution">attribute credit</a>.</li>
 </ul>
 
 <h2>
