Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Julia.jl by svaksha</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -30,7 +30,12 @@
 
       </header>
       <section>
-        <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> aggregates and curates decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
+        <h1>
+<a id="juliajl" class="anchor" href="#juliajl" aria-hidden="true"><span class="octicon octicon-link"></span></a>Julia.jl</h1>
+
+<p><a href="https://github.com/sindresorhus/awesome"><img src="https://cdn.rawgit.com/sindresorhus/awesome/d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg" alt="Awesome"></a></p>
+
+<p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> aggregates and curates decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
 
 <ul>
 <li><a href="#index">INDEX</a></li>
@@ -61,7 +66,7 @@ For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl
 
 <ul>
 <li>
-<a href="https://github.com/svaksha/Julia.jl/blob/master/AI.md">AI.md</a> :: Algorithms, DataMining, Data Structures, ML, NLP, ...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/AI.md">AI.md</a> :: Algorithms, DataMining, Data Structures, HMM, ML, NLP, ...</li>
 <li>
 <a href="https://github.com/svaksha/Julia.jl/blob/master/Astronomy.md">Astronomy.md</a> :: Astronomy and Imaging packages.</li>
 <li>
