--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
         <h1>
 <a id="juliajl" class="anchor" href="#juliajl" aria-hidden="true"><span class="octicon octicon-link"></span></a>Julia.jl</h1>
 
-<p><a href="https://github.com/sindresorhus/awesome"><img src="https://cdn.rawgit.com/sindresorhus/awesome/d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg" alt="Awesome"></a></p>
-
 <p><a href="http://svaksha.github.io/Julia.jl">Julia.jl</a> aggregates and curates decibans of resources for the <a href="https://github.com/JuliaLang">Julia language</a>.</p>
 
 <ul>
@@ -136,7 +134,7 @@ For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl
 <li>
 <a href="https://gitlab.com/svaksha/Julia.jl">GitLab</a> :: git clone <a href="mailto:git@gitlab.com">git@gitlab.com</a>:svaksha/Julia.jl.git </li>
 <li>
-<a href="https://gitlab.devlabs.linuxassist.net/svaksha/Julia.jl">Devlabs</a> :: git clone ssh://git@gitlab.devlabs.linuxassist.net:608/svaksha/Julia.jl.git</li>
+<a href="https://notabug.org/svaksha/julia.jl">NotABug</a> :: git clone <a href="mailto:git@notabug.org">git@notabug.org</a>:svaksha/julia.jl.git</li>
 </ul>
 
 <h1>
@@ -147,15 +145,12 @@ For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl
 <h2>
 <a id="guidelines" class="anchor" href="#guidelines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Guidelines</h2>
 
-<p>The Julia community has <a href="http://julialang.org/community/standards/">ethical guidelines</a> aimed at respecting Copyright, Licenses and attribution standards which you are requested to follow while submitting materials to be listed. Additionally, if you find any material (or code repos) that violates these ethical standards, please file a bug report for their removal from <code>Julia.jl</code>.</p>
+<p>The Julia community has <a href="http://julialang.org/community/standards/">ethical guidelines</a> aimed at respecting Copyright, Licenses and attribution standards<sub>{1} and {2}</sub> which you are requested to follow while submitting materials to be listed. Additionally, if you find any material (or code repos) that violates these ethical standards, please file a bug report for their removal from <code>Julia.jl</code>.</p>
 
 <ul>
 <li>References :
-
-<ul>
-<li><a href="https://github.com/JuliaLang/julialang.github.com/issues/200">https://github.com/JuliaLang/julialang.github.com/issues/200</a></li>
-<li><a href="https://github.com/JuliaLang/julialang.github.com/issues/194">https://github.com/JuliaLang/julialang.github.com/issues/194</a></li>
-</ul>
+{1} <a href="https://github.com/JuliaLang/julialang.github.com/issues/200">https://github.com/JuliaLang/julialang.github.com/issues/200</a>
+{2} <a href="https://github.com/JuliaLang/julialang.github.com/issues/194">https://github.com/JuliaLang/julialang.github.com/issues/194</a>
 </li>
 </ul>
 
