Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -145,12 +145,17 @@ For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl
 <h2>
 <a id="guidelines" class="anchor" href="#guidelines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Guidelines</h2>
 
-<p>The Julia community has <a href="http://julialang.org/community/standards/">ethical guidelines</a> aimed at respecting Copyright, Licenses and attribution standards<sub>{1} and {2}</sub> which you are requested to follow while submitting materials to be listed. Additionally, if you find any material (or code repos) that violates these ethical standards, please file a bug report for their removal from <code>Julia.jl</code>.</p>
+<p>The Julia community has <a href="http://julialang.org/community/standards/">ethical guidelines</a> aimed at respecting Copyright, Licenses and attribution standards<sup>{1} and {2}</sup> which you are requested to follow while submitting materials to be listed. Additionally, if you find any material (or code repos) that violates these ethical standards, please file a bug report for their removal from <code>Julia.jl</code>.</p>
 
 <ul>
 <li>References :
-{1} <a href="https://github.com/JuliaLang/julialang.github.com/issues/200">https://github.com/JuliaLang/julialang.github.com/issues/200</a>
-{2} <a href="https://github.com/JuliaLang/julialang.github.com/issues/194">https://github.com/JuliaLang/julialang.github.com/issues/194</a>
+
+<ul>
+<li>{1} <a href="https://github.com/JuliaLang/julialang.github.com/issues/200">https://github.com/JuliaLang/julialang.github.com/issues/200</a>
+</li>
+<li>{2} <a href="https://github.com/JuliaLang/julialang.github.com/issues/194">https://github.com/JuliaLang/julialang.github.com/issues/194</a>
+</li>
+</ul>
 </li>
 </ul>
 
