Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 <h1>
 <a id="index" class="anchor" href="#index" aria-hidden="true"><span class="octicon octicon-link"></span></a>INDEX</h1>
 
-<p>For Base packages, check if the package you seek is listed in the <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, then use the built-in package manager to install it after checking the requirements for respective versions and dont forget the Easter eggs! 
-For package creators, here is a <a href="https://github.com/JuliaLang/Example.jl">sample Julia package</a> model. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>.</p>
+<p>For Base packages, check if the package you seek is listed in the <a href="https://github.com/JuliaLang/METADATA.jl">built-in package manager</a> on github, or check METADATA for <a href="http://pkg.julialang.org/">registered Julia packages</a>, then use the built-in package manager to install it after checking the requirements for respective versions and dont forget the Easter eggs! </p>
+
+<p>To create a package, check out the <a href="https://github.com/JuliaLang/PkgDev.jl">Julia Package Development Kit</a> and here is a <a href="https://github.com/JuliaLang/Example.jl">sample Julia package</a> model. The latest interesting package statistics are available at the <a href="http://pkg.julialang.org/pulse.html">Julia Package Ecosystem Pulse</a> webpage which mirrors the current core development on <a href="https://github.com/JuliaLang/julia/pulse">github</a>. Abandoned packages are listed in the <a href="https://github.com/JuliaDeprecated">Julia Deprecated</a> organisation.</p>
 
 <ul>
 <li>
