Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,53 +66,53 @@
 
 <ul>
 <li>
-<a href="AI.md">AI.md</a> :: Algorithms, DataMining, Data Structures, HMM, ML, NLP, ...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/AI.md">AI.md</a> :: Algorithms, DataMining, Data Structures, HMM, ML, NLP, ...</li>
 <li>
-<a href="Astronomy.md">Astronomy.md</a> :: Astronomy and Imaging packages.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Astronomy.md">Astronomy.md</a> :: Astronomy and Imaging packages.</li>
 <li>
-<a href="API.md">API.md</a> :: Language API's - C++, Fortran, Go, Java, JavaScript, MATLAB, Perl, Python, R, ...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/API.md">API.md</a> :: Language API's - C++, Fortran, Go, Java, JavaScript, MATLAB, Perl, Python, R, ...</li>
 <li>
-<a href="Biology.md">Biology.md</a> :: Bioinformatics, genomics, agriculture, food science, medicine, genetic engineering, Neuroscience, et. al...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Biology.md">Biology.md</a> :: Bioinformatics, genomics, agriculture, food science, medicine, genetic engineering, Neuroscience, et. al...</li>
 <li>
-<a href="Build-Automation.md">Build-Automation.md</a> :: Tools for continuous integration (CI),  continuous delivery (CD), Packaging, release engineering (RE), release management (RM), software configuration management (SCM), etc...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Build-Automation.md">Build-Automation.md</a> :: Tools for continuous integration (CI),  continuous delivery (CD), Packaging, release engineering (RE), release management (RM), software configuration management (SCM), etc...</li>
 <li>
-<a href="Chemistry.md">Chemistry.md</a> :: Analytical chemistry, cheminformatics, crystallography, nanochemistry, nuclear chemistry ...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Chemistry.md">Chemistry.md</a> :: Analytical chemistry, cheminformatics, crystallography, nanochemistry, nuclear chemistry ...</li>
 <li>
-<a href="Community.md">Community.md</a> :: List of community and development links, including events, (un)conferences, forums/ meetup groups, NEWS, etc..</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Community.md">Community.md</a> :: List of community and development links, including events, (un)conferences, forums/ meetup groups, NEWS, etc..</li>
 <li>
-<a href="Computer-Graphics.md">Computer-Graphics.md</a> :: Plotting, Graphics and other Visualization tools.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Computer-Graphics.md">Computer-Graphics.md</a> :: Plotting, Graphics and other Visualization tools.</li>
 <li>
-<a href="DataBase.md">DataBase.md</a> :: NoSQL, RDBMS and Middleware API's.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/DataBase.md">DataBase.md</a> :: NoSQL, RDBMS and Middleware API's.</li>
 <li>
-<a href="Earth-Science.md">Earth-Science.md</a> :: software related to the subcategories of cartography, climatology, geobiology, geochemistry, geography, geoinformatics, geology‎, geophysics‎, geoscience/GIS, geomathematics, meteorology, oceanography, etc...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Earth-Science.md">Earth-Science.md</a> :: software related to the subcategories of cartography, climatology, geobiology, geochemistry, geography, geoinformatics, geology‎, geophysics‎, geoscience/GIS, geomathematics, meteorology, oceanography, etc...</li>
 <li>
-<a href="Hardware.md">Hardware.md</a> :: Software for cross-platform hardware and other API libraries.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Hardware.md">Hardware.md</a> :: Software for cross-platform hardware and other API libraries.</li>
 <li>
-<a href="HPC.md">HPC.md</a> :: HPC, Distributed Computing, Cloud computing, Cluster computing, Grid computing, Kernels and architectures like ARM, MIPS, GPU, CUDA, etc...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/HPC.md">HPC.md</a> :: HPC, Distributed Computing, Cloud computing, Cluster computing, Grid computing, Kernels and architectures like ARM, MIPS, GPU, CUDA, etc...</li>
 <li>
-<a href="i18n-L10n.md">i18n-L10n.md</a> :: Transliteration, Internationalisation (i18n) and Localisation (L10n)</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/i18n-L10n.md">i18n-L10n.md</a> :: Transliteration, Internationalisation (i18n) and Localisation (L10n)</li>
 <li>
-<a href="IO.md">IO.md</a> :: Input/Output functionality and support for file formats.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/IO.md">IO.md</a> :: Input/Output functionality and support for file formats.</li>
 <li>
-<a href="Mathematics.md">Mathematics.md</a>:: Algebra, Geometry,... anything Math related.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Mathematics.md">Mathematics.md</a>:: Algebra, Geometry,... anything Math related.</li>
 <li>
-<a href="OpenData.md">OpenData.md</a> :: OpenData, Free Data Sets.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/OpenData.md">OpenData.md</a> :: OpenData, Free Data Sets.</li>
 <li>
-<a href="Physics.md">Physics.md</a> :: Julia software related to Physics.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Physics.md">Physics.md</a> :: Julia software related to Physics.</li>
 <li>
-<a href="Programming-Paradigms.md">Programming-Paradigms.md</a> :: Programming Paradigms and language concepts that are used in the type system, data types, etc..</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Programming-Paradigms.md">Programming-Paradigms.md</a> :: Programming Paradigms and language concepts that are used in the type system, data types, etc..</li>
 <li>
-<a href="Publications.md">Publications.md</a> :: Research Papers (journal and conference publications).</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Publications.md">Publications.md</a> :: Research Papers (journal and conference publications).</li>
 <li>
-<a href="QA.md">QA.md</a> :: Test Driven Development, Sandbox, Functional/ Unit testing,... Quality-related tools.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/QA.md">QA.md</a> :: Test Driven Development, Sandbox, Functional/ Unit testing,... Quality-related tools.</li>
 <li>
-<a href="Resources.md">Resources.md</a> :: blogs, cookbooks, cheatsheets, IJulia NoteBooks, and other non-standard resources.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Resources.md">Resources.md</a> :: blogs, cookbooks, cheatsheets, IJulia NoteBooks, and other non-standard resources.</li>
 <li>
-<a href="Statistics.md">Statistics.md</a> :: Actuarial Science, Finance, economics, stochastic, insurance Statistics, Operations research and Benchmarks and Optimization toolkits....</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Statistics.md">Statistics.md</a> :: Actuarial Science, Finance, economics, stochastic, insurance Statistics, Operations research and Benchmarks and Optimization toolkits....</li>
 <li>
-<a href="Utilities.md">Utilities.md</a> :: Handy toolkits and other general utilities for your Desktop.</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Utilities.md">Utilities.md</a> :: Handy toolkits and other general utilities for your Desktop.</li>
 <li>
-<a href="Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud WWW, HTTP, Networking, Servers, etc...</li>
+<a href="https://github.com/svaksha/Julia.jl/blob/master/Web-Server.md">Web-Server.md</a> :: HPC, Distributed Computing, Cloud WWW, HTTP, Networking, Servers, etc...</li>
 </ul>
 
 <p><strong>DISCLAIMER :</strong> As a new language in the scientific computing scene it is frequently in a state of flux due to the addition of new libraries, resulting in frequent changes and page reordering. Since the <strong>Julia.jl</strong> repo only provides a list (of links) of Julia packages out in the wild, it should not be considered an endorsment of any particular package for software quality, technical features, coding style/organization, etc...</p>
